--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -191,10 +191,6 @@
   background-color: #50cfcd;
   width: 100%;
   padding: 20px;
-  /* text-align: right;
-  @media (min-width: 375px) {
-    position: inherit;
-  } */
 }
 
 .footer-content {
